[gd_scene format=3 uid="uid://do7qksrhwy3b4"]

[ext_resource type="Theme" uid="uid://bnr8x3yfeavfk" path="res://Themes/LabelTitles.tres" id="1_v5i2m"]
[ext_resource type="Script" uid="uid://b4mmiwl1uxd7y" path="res://Scripts/UI/vr_atmosphere_properties_ui.gd" id="1_vkun2"]
[ext_resource type="Theme" uid="uid://cguww0cl6anij" path="res://Themes/LabelResults.tres" id="2_vkun2"]

[node name="VRAtmospherePropertiesUI" type="Control" unique_id=1442386423]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vkun2")

[node name="Panel" type="Panel" parent="." unique_id=1365959314]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 4.0
offset_right = 1115.0
offset_bottom = 612.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=63777697]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 465.0
offset_top = 5.0
offset_right = 677.0
offset_bottom = 94.0
grow_horizontal = 2

[node name="AtmoTitleLabel" type="Label" parent="VBoxContainer" unique_id=594306774]
layout_mode = 2
theme = ExtResource("1_v5i2m")
text = "Atmosphere Properties"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=1595067324]
layout_mode = 2

[node name="AtmoHeightLabel" type="Label" parent="VBoxContainer" unique_id=2144433042]
layout_mode = 2
theme = ExtResource("2_vkun2")
horizontal_alignment = 1

[node name="AtmoMachLabel" type="Label" parent="VBoxContainer" unique_id=592584409]
layout_mode = 2
theme = ExtResource("2_vkun2")
horizontal_alignment = 1

[node name="AtmoTempLabel" type="Label" parent="VBoxContainer" unique_id=57670060]
layout_mode = 2
theme = ExtResource("2_vkun2")
horizontal_alignment = 1

[node name="AtmoPresLabel" type="Label" parent="VBoxContainer" unique_id=1310684887]
layout_mode = 2
theme = ExtResource("2_vkun2")
horizontal_alignment = 1

[node name="AtmoDensLabel" type="Label" parent="VBoxContainer" unique_id=1608451758]
layout_mode = 2
theme = ExtResource("2_vkun2")
horizontal_alignment = 1

[node name="AtmoStagPresLabel" type="Label" parent="VBoxContainer" unique_id=247468211]
layout_mode = 2
theme = ExtResource("2_vkun2")
horizontal_alignment = 1

[node name="AtmoStagTempLabel" type="Label" parent="VBoxContainer" unique_id=980359175]
layout_mode = 2
theme = ExtResource("2_vkun2")
horizontal_alignment = 1

[node name="AtmoFlowVelLabel" type="Label" parent="VBoxContainer" unique_id=416543206]
layout_mode = 2
theme = ExtResource("2_vkun2")
horizontal_alignment = 1
