class_name VRAtmoProp
extends Control


@onready var atmo_prop_height : Label  = $VBoxContainer/AtmoHeightLabel
@onready var atmo_prop_mach_label : Label = $VBoxContainer/AtmoMachLabel
@onready var atmo_temp_label : Label = $VBoxContainer/AtmoTempLabel
@onready var atmo_pres_label : Label = $VBoxContainer/AtmoPresLabel
@onready var atmo_dens_label : Label = $VBoxContainer/AtmoDensLabel
@onready var atmo_stag_press_label : Label = $VBoxContainer/AtmoStagPresLabel
@onready var atmo_stag_temp_label : Label = $VBoxContainer/AtmoStagTempLabel
@onready var atmo_flow_vel_label : Label = $VBoxContainer/AtmoStagPresLabel
@onready var flow_vel_label : Label = $VBoxContainer/AtmoFlowVelLabel
